@@ -353,4 +353,5 @@ Entity中toVo区别是否忽略大小写
 =====================================================
 2.16.0
 1、全面更新db模块中的ds部分，使用工厂类自动选定连接池实现
-3、扩充CollectionUtil，增加交集（intersection）、并集（union）、差集（disjunction）方法
+2、扩充CollectionUtil，增加交集（intersection）、并集（union）、差集（disjunction）方法
+3、ds部分增加Tomcat-jdbc-pool的实现
